tests/snippets/semver_basic/lower.snapshot
# Lower

## snippet
  fn snippet$main() -> i32
    block :void
      let __scrut_0: ParseError | Version =
        call :ParseError | Version
          callee:
            parse :fn(string) -> ParseError | Version
          arg0:
            "1.2.3-rc.1" :string
      ~>
        if :void
          cond:
            is Version :bool
              __scrut_0 :ParseError | Version
          then:
            let ver: Version =
              cast → Version
                __scrut_0 :ParseError | Version
            ~>
              block :void
                call :void
                  callee:
                    std_io$std_io$println__string :void
                  arg0:
                    call :string
                      callee:
                        std_semver$Version$Display$to_string :string
                      arg0:
                        ver :Version
                let base: Version =
                  call :Version
                    callee:
                      parse_one :fn(string) -> Version
                    arg0:
                      "1.0.0" :string
                if :void
                  cond:
                    gt :bool
                      l:
                        call :i32
                          callee:
                            std_semver$Version$Comparable$compare :i32
                          arg0:
                            ver :Version
                          arg1:
                            base :Version
                      r:
                        int(0) :i32
                  then:
                    call :void
                      callee:
                        std_io$std_io$println__string :void
                      arg0:
                        "after 1.0.0" :string
                ~>
                  block :void
                    let __scrut_1: ParseError | VersionRange =
                      call :ParseError | VersionRange
                        callee:
                          parse_range :fn(string) -> ParseError | VersionRange
                        arg0:
                          "^1.0.0" :string
                    ~>
                      if :void
                        cond:
                          is VersionRange :bool
                            __scrut_1 :ParseError | VersionRange
                        then:
                          let rg: VersionRange =
                            cast → VersionRange
                              __scrut_1 :ParseError | VersionRange
                          ~>
                            block :void
                              let target: Version =
                                call :Version
                                  callee:
                                    parse_one :fn(string) -> Version
                                  arg0:
                                    "1.5.0" :string
                              ~>
                                if :void
                                  cond:
                                    call :bool
                                      callee:
                                        std_semver$VersionRange$Contains$contains :bool
                                      arg0:
                                        rg :VersionRange
                                      arg1:
                                        target :Version
                                  then:
                                    call :void
                                      callee:
                                        std_io$std_io$println__string :void
                                      arg0:
                                        "1.5.0 in ^1.0.0" :string
                        else:
                          ~>
                            if :void
                              cond:
                                is ParseError :bool
                                  __scrut_1 :ParseError | VersionRange
                              then:
                                let e: ParseError =
                                  cast → ParseError
                                    __scrut_1 :ParseError | VersionRange
                                ~>
                                  block :void
                                    call :void
                                      callee:
                                        std_io$std_io$eprintln__string :void
                                      arg0:
                                        call :string
                                          callee:
                                            concat2 :string
                                          arg0:
                                            "range err: " :string
                                          arg1:
                                            call :string
                                              callee:
                                                std_string$ParseError$Error$message :string
                                              arg0:
                                                e :ParseError
                                    return int(1) :i32
                              else:
                                ~>
                                  unreachable("non-exhaustive match (T3013 should have caught this)") :void
          else:
            ~>
              if :void
                cond:
                  is ParseError :bool
                    __scrut_0 :ParseError | Version
                then:
                  let e: ParseError =
                    cast → ParseError
                      __scrut_0 :ParseError | Version
                  ~>
                    block :void
                      call :void
                        callee:
                          std_io$std_io$eprintln__string :void
                        arg0:
                          call :string
                            callee:
                              concat2 :string
                            arg0:
                              "err: " :string
                            arg1:
                              call :string
                                callee:
                                  std_string$ParseError$Error$message :string
                                arg0:
                                  e :ParseError
                      return int(1) :i32
                else:
                  ~>
                    unreachable("non-exhaustive match (T3013 should have caught this)") :void
    return int(0) :i32
  fn snippet$parse_one(s: string) -> Version
    ~>
      block :never
        let __scrut_0: ParseError | Version =
          call :ParseError | Version
            callee:
              parse :fn(string) -> ParseError | Version
            arg0:
              s :string
        ~>
          if :never
            cond:
              is Version :bool
                __scrut_0 :ParseError | Version
            then:
              let v: Version =
                cast → Version
                  __scrut_0 :ParseError | Version
              ~>
                block :void
                  return v :Version
            else:
              ~>
                if :never
                  cond:
                    is ParseError :bool
                      __scrut_0 :ParseError | Version
                  then:
                    ~>
                      block :void
                        return
                          Version {
                            major: int(0) :i32
                            minor: int(0) :i32
                            patch: int(0) :i32
                            prerelease: "" :string
                            build: "" :string
                          }
                  else:
                    ~>
                      unreachable("non-exhaustive match (T3013 should have caught this)") :never
